; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_stats.c_input_stats_Destroy.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_stats.c_input_stats_Destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_stats = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @input_stats_Destroy(%struct.input_stats* %0) #0 {
  %2 = alloca %struct.input_stats*, align 8
  store %struct.input_stats* %0, %struct.input_stats** %2, align 8
  %3 = load %struct.input_stats*, %struct.input_stats** %2, align 8
  %4 = getelementptr inbounds %struct.input_stats, %struct.input_stats* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = call i32 @vlc_mutex_destroy(i32* %5)
  %7 = load %struct.input_stats*, %struct.input_stats** %2, align 8
  %8 = getelementptr inbounds %struct.input_stats, %struct.input_stats* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = call i32 @vlc_mutex_destroy(i32* %9)
  %11 = load %struct.input_stats*, %struct.input_stats** %2, align 8
  %12 = call i32 @free(%struct.input_stats* %11)
  ret void
}

declare dso_local i32 @vlc_mutex_destroy(i32*) #1

declare dso_local i32 @free(%struct.input_stats*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
